--- a/learnwords/Resources/Base.lproj/Main.storyboard
+++ b/learnwords/Resources/Base.lproj/Main.storyboard
@@ -18,25 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" alpha="0.55000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter word" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DtC-kp-pi0">
-                                <rect key="frame" x="21" y="634" width="372" height="45"/>
-                                <color key="backgroundColor" white="0.90421660958904104" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="IO9-Aj-KiU"/>
-                                    <constraint firstAttribute="height" constant="45" id="Oih-z4-5JZ"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="light" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Bdc-Y0-TXa"/>
-                                </connections>
-                            </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5P-AN-71M" userLabel="card">
-                                <rect key="frame" x="24" y="74" width="370" height="552"/>
+                                <rect key="frame" x="24" y="88" width="370" height="522"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WSa-0U-lzY">
-                                        <rect key="frame" x="8" y="8" width="88" height="538"/>
+                                        <rect key="frame" x="8" y="8" width="88" height="508"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="88" id="73C-sI-ZTa"/>
@@ -46,7 +32,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJI-XN-nza">
-                                        <rect key="frame" x="274" y="8" width="88" height="536"/>
+                                        <rect key="frame" x="274" y="8" width="88" height="506"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="88" id="TuT-bP-08s"/>
@@ -55,78 +41,72 @@
                                             <action selector="rightSideBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="17q-2d-Lo9"/>
                                         </connections>
                                     </button>
-                                    <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="wXv-nN-46e">
-                                        <rect key="frame" x="45" y="5" width="280" height="240"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wordLbl" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="45" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zhu-1p-TuY">
-                                                <rect key="frame" x="8" y="0.0" width="264" height="100"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="hpG-hD-M3q"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="70"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8sl-fw-9dG" customClass="RecordButton" customModule="learnwords" customModuleProvider="target">
-                                                <rect key="frame" x="90" y="140" width="100" height="100"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="0Yo-OC-bgc"/>
-                                                    <constraint firstAttribute="width" constant="100" id="DTJ-gk-Lbl"/>
-                                                </constraints>
-                                                <state key="normal" backgroundImage="microphone">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="microphoneBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8mP-6Z-c0P"/>
-                                                </connections>
-                                            </button>
-                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="goodLbl" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="19" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Qq-9w-Yaj">
-                                                <rect key="frame" x="3.6666666666666572" y="248" width="272.66666666666674" height="175"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="175" id="qM1-yf-YEM"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="70"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wordLbl" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="45" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zhu-1p-TuY">
+                                        <rect key="frame" x="53" y="211" width="264" height="100"/>
                                         <constraints>
-                                            <constraint firstItem="zhu-1p-TuY" firstAttribute="leading" secondItem="wXv-nN-46e" secondAttribute="leading" constant="8" id="iNH-nI-LXN"/>
-                                            <constraint firstAttribute="trailing" secondItem="zhu-1p-TuY" secondAttribute="trailing" constant="8" id="mzr-qS-pIP"/>
-                                            <constraint firstItem="6Qq-9w-Yaj" firstAttribute="top" secondItem="8sl-fw-9dG" secondAttribute="bottom" constant="8" id="tbj-4o-JKY"/>
-                                            <constraint firstItem="8sl-fw-9dG" firstAttribute="centerX" secondItem="wXv-nN-46e" secondAttribute="centerX" id="yRR-Pq-USy"/>
+                                            <constraint firstAttribute="height" constant="100" id="hpG-hD-M3q"/>
                                         </constraints>
-                                    </stackView>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="70"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                                 <constraints>
+                                    <constraint firstItem="zhu-1p-TuY" firstAttribute="centerX" secondItem="g5P-AN-71M" secondAttribute="centerX" id="6pM-wZ-0H1"/>
                                     <constraint firstItem="WSa-0U-lzY" firstAttribute="top" secondItem="eJI-XN-nza" secondAttribute="top" id="7aG-uO-0ON"/>
                                     <constraint firstItem="eJI-XN-nza" firstAttribute="trailing" secondItem="g5P-AN-71M" secondAttribute="trailingMargin" id="HQ6-In-E22"/>
                                     <constraint firstItem="WSa-0U-lzY" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="topMargin" id="PNd-Il-16v"/>
+                                    <constraint firstItem="zhu-1p-TuY" firstAttribute="centerY" secondItem="g5P-AN-71M" secondAttribute="centerY" id="Trk-El-WLm"/>
                                     <constraint firstItem="WSa-0U-lzY" firstAttribute="baseline" secondItem="eJI-XN-nza" secondAttribute="baseline" id="df1-Oi-fM9"/>
                                     <constraint firstAttribute="bottom" secondItem="WSa-0U-lzY" secondAttribute="bottom" constant="6" id="gdX-hr-W5N"/>
                                     <constraint firstItem="eJI-XN-nza" firstAttribute="bottom" secondItem="g5P-AN-71M" secondAttribute="bottomMargin" id="sLF-Jh-7Kj"/>
-                                    <constraint firstItem="wXv-nN-46e" firstAttribute="centerX" secondItem="g5P-AN-71M" secondAttribute="centerX" id="tL5-WU-x3c"/>
                                     <constraint firstItem="WSa-0U-lzY" firstAttribute="leading" secondItem="g5P-AN-71M" secondAttribute="leadingMargin" id="wf0-MC-FlS"/>
-                                    <constraint firstItem="wXv-nN-46e" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="top" constant="5" id="xNt-c0-ccV"/>
-                                    <constraint firstAttribute="trailing" secondItem="zhu-1p-TuY" secondAttribute="trailing" constant="53" id="yyp-B6-9ya"/>
                                     <constraint firstItem="eJI-XN-nza" firstAttribute="firstBaseline" secondItem="WSa-0U-lzY" secondAttribute="firstBaseline" id="zwN-E9-gNA"/>
                                 </constraints>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="xuA-OV-Rzf" appends="YES" id="iOY-es-wD6"/>
                                 </connections>
                             </view>
+                            <textField opaque="NO" alpha="0.55000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter word" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DtC-kp-pi0">
+                                <rect key="frame" x="21" y="634" width="349" height="45"/>
+                                <color key="backgroundColor" white="0.90421660958904104" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="9Bw-0N-mbo"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="light" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Bdc-Y0-TXa"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8sl-fw-9dG" customClass="RecordButton" customModule="learnwords" customModuleProvider="target">
+                                <rect key="frame" x="380" y="644" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="2xT-4q-RBW"/>
+                                    <constraint firstAttribute="width" constant="25" id="gQ5-Ge-olg"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="microphone">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="microphoneBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8mP-6Z-c0P"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="cUG-WI-TIj" firstAttribute="trailing" secondItem="8sl-fw-9dG" secondAttribute="trailing" constant="9" id="3Jv-g5-IPh"/>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" constant="21" id="81E-vQ-9ZG"/>
                             <constraint firstItem="g5P-AN-71M" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" constant="24" id="JNV-1a-E7B"/>
-                            <constraint firstItem="cUG-WI-TIj" firstAttribute="trailing" secondItem="DtC-kp-pi0" secondAttribute="trailing" constant="21" id="WDb-aY-laB"/>
-                            <constraint firstItem="DtC-kp-pi0" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="bottom" constant="8" id="ZPi-hQ-087"/>
-                            <constraint firstItem="DtC-kp-pi0" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="bottom" constant="8" symbolic="YES" id="dJs-BE-Xka"/>
+                            <constraint firstItem="8sl-fw-9dG" firstAttribute="leading" secondItem="DtC-kp-pi0" secondAttribute="trailing" constant="10" id="MeW-7t-Yvk"/>
+                            <constraint firstItem="cUG-WI-TIj" firstAttribute="bottom" secondItem="8sl-fw-9dG" secondAttribute="bottom" constant="18" id="Tfx-ce-VVO"/>
+                            <constraint firstItem="DtC-kp-pi0" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="bottom" constant="24" id="ZPi-hQ-087"/>
                             <constraint firstItem="g5P-AN-71M" firstAttribute="trailing" secondItem="gYc-Rx-Ofx" secondAttribute="trailingMargin" id="mff-Et-VQJ"/>
                             <constraint firstItem="cUG-WI-TIj" firstAttribute="bottom" secondItem="DtC-kp-pi0" secondAttribute="bottom" constant="8" id="oTt-O7-cEr"/>
-                            <constraint firstItem="g5P-AN-71M" firstAttribute="top" secondItem="cUG-WI-TIj" secondAttribute="top" constant="10" id="pbT-Fi-xYx"/>
+                            <constraint firstItem="g5P-AN-71M" firstAttribute="top" secondItem="cUG-WI-TIj" secondAttribute="top" constant="24" id="pbT-Fi-xYx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cUG-WI-TIj"/>
                     </view>
@@ -145,7 +125,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-119" y="27"/>
+            <point key="canvasLocation" x="-120.28985507246378" y="26.90217391304348"/>
         </scene>
         <!--Statistics View Controller-->
         <scene sceneID="5dy-EP-M96">
