--- a/learnwords/Resources/Base.lproj/Main.storyboard
+++ b/learnwords/Resources/Base.lproj/Main.storyboard
@@ -206,20 +206,60 @@
         <scene sceneID="gJo-gr-AW0">
             <objects>
                 <tableViewController storyboardIdentifier="languageSet" id="vHI-cv-IOe" customClass="LanguageSetViewController" customModule="learnwords" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="thn-Tc-yJH">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="153" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="thn-Tc-yJH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="separatorColor" red="0.13961067799999999" green="0.72532612090000004" blue="0.99992305039999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="e9m-2F-5qS">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SetsCell" id="e9m-2F-5qS" customClass="SetsCell" customModule="learnwords" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="153"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="e9m-2F-5qS" id="vYC-f0-dph">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="153"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXb-ly-F1T">
+                                            <rect key="frame" x="30" y="27" width="354" height="98"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWv-Kt-jA0">
+                                                    <rect key="frame" x="20" y="10.000000000000004" width="314" height="51.333333333333343"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMZ-XM-3Bi">
+                                                    <rect key="frame" x="20" y="69.333333333333329" width="314" height="20.666666666666671"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="xWv-Kt-jA0" secondAttribute="trailing" constant="20" id="7Wg-1a-de0"/>
+                                                <constraint firstAttribute="trailing" secondItem="qMZ-XM-3Bi" secondAttribute="trailing" constant="20" id="8jl-Zw-ovH"/>
+                                                <constraint firstItem="qMZ-XM-3Bi" firstAttribute="leading" secondItem="MXb-ly-F1T" secondAttribute="leading" constant="20" id="CVt-lR-9HT"/>
+                                                <constraint firstItem="xWv-Kt-jA0" firstAttribute="leading" secondItem="MXb-ly-F1T" secondAttribute="leading" constant="20" id="Gyf-uZ-Htt"/>
+                                                <constraint firstItem="xWv-Kt-jA0" firstAttribute="top" secondItem="MXb-ly-F1T" secondAttribute="top" constant="10" id="iR9-Xg-3XM"/>
+                                                <constraint firstItem="qMZ-XM-3Bi" firstAttribute="top" secondItem="xWv-Kt-jA0" secondAttribute="bottom" constant="8" id="p9s-oG-ooQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="qMZ-XM-3Bi" secondAttribute="bottom" constant="8" id="x0F-o2-yML"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="MXb-ly-F1T" secondAttribute="bottom" constant="17" id="4ER-Hf-r5G"/>
+                                        <constraint firstItem="MXb-ly-F1T" firstAttribute="leading" secondItem="vYC-f0-dph" secondAttribute="leadingMargin" constant="10" id="5PH-rE-LG7"/>
+                                        <constraint firstItem="MXb-ly-F1T" firstAttribute="top" secondItem="vYC-f0-dph" secondAttribute="topMargin" constant="16" id="quc-8K-Lwe"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="MXb-ly-F1T" secondAttribute="trailing" constant="10" id="s8H-yF-2jN"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="depictionLbl" destination="qMZ-XM-3Bi" id="aea-LO-LT2"/>
+                                    <outlet property="nameLbl" destination="xWv-Kt-jA0" id="LAb-zs-UwN"/>
+                                    <outlet property="shadowView" destination="MXb-ly-F1T" id="hk3-oL-ejL"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
