--- a/learnwords/Resources/Base.lproj/Main.storyboard
+++ b/learnwords/Resources/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                                 </connections>
                             </view>
                             <textField opaque="NO" alpha="0.55000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter word" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DtC-kp-pi0">
-                                <rect key="frame" x="21" y="634" width="349" height="45"/>
+                                <rect key="frame" x="21" y="634" width="372" height="45"/>
                                 <color key="backgroundColor" white="0.90421660958904104" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="9Bw-0N-mbo"/>
@@ -77,12 +77,18 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="light" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="circleCorner" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Bdc-Y0-TXa"/>
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8sl-fw-9dG" customClass="RecordButton" customModule="learnwords" customModuleProvider="target">
-                                <rect key="frame" x="380" y="644" width="25" height="25"/>
+                                <rect key="frame" x="363" y="644" width="25" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="2xT-4q-RBW"/>
                                     <constraint firstAttribute="width" constant="25" id="gQ5-Ge-olg"/>
@@ -98,10 +104,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="cUG-WI-TIj" firstAttribute="trailing" secondItem="8sl-fw-9dG" secondAttribute="trailing" constant="9" id="3Jv-g5-IPh"/>
+                            <constraint firstItem="cUG-WI-TIj" firstAttribute="trailing" secondItem="8sl-fw-9dG" secondAttribute="trailing" constant="26" id="3Jv-g5-IPh"/>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" constant="21" id="81E-vQ-9ZG"/>
                             <constraint firstItem="g5P-AN-71M" firstAttribute="leading" secondItem="cUG-WI-TIj" secondAttribute="leading" constant="20" id="JNV-1a-E7B"/>
-                            <constraint firstItem="8sl-fw-9dG" firstAttribute="leading" secondItem="DtC-kp-pi0" secondAttribute="trailing" constant="10" id="MeW-7t-Yvk"/>
+                            <constraint firstItem="cUG-WI-TIj" firstAttribute="trailing" secondItem="DtC-kp-pi0" secondAttribute="trailing" constant="21" id="NaR-dE-czj"/>
                             <constraint firstItem="cUG-WI-TIj" firstAttribute="bottom" secondItem="8sl-fw-9dG" secondAttribute="bottom" constant="18" id="Tfx-ce-VVO"/>
                             <constraint firstItem="DtC-kp-pi0" firstAttribute="top" secondItem="g5P-AN-71M" secondAttribute="bottom" constant="24" id="ZPi-hQ-087"/>
                             <constraint firstItem="g5P-AN-71M" firstAttribute="trailing" secondItem="gYc-Rx-Ofx" secondAttribute="trailingMargin" id="mff-Et-VQJ"/>
